<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyTweets</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="compose_tweet">Compose</string>
    <string name="home">Home</string>
    <string name="etComposeHint">What\'s Happening?</string>
    <string name="tweet">Tweet</string>
    <string name="maxCharCount">140</string>
    <string name="view_profile">View Profile</string>
    <string name="tweets">Tweets</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="loading">Loading</string>
    <string name="loadingMsg">Fetching latest tweets</string>

</resources>