<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/rlUserInfoHeader"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rlUserHeader">


        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:id="@+id/ivProfileImage"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/tvUserName"
            android:textSize="20sp"
            android:layout_alignTop="@+id/ivProfileImage"
            android:layout_toEndOf="@+id/ivProfileImage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/tvTagline"
            android:textSize="12sp"
            android:layout_below="@+id/tvUserName"
            android:layout_toEndOf="@+id/ivProfileImage" />


    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/llCounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlUserHeader"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTweetCount"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTweetCountText"
            android:text="@string/tweets"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFollowingCount"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFollowingCountText"
            android:text="@string/following"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/tvFollowersCount"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFollowersCountText"
            android:text="@string/followers"
            android:textSize="12sp" />

    </LinearLayout>


</RelativeLayout>